<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="ModbusRegisterType" Id="{37bcdc3e-538f-476f-91a6-3d88f397a7a0}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE ModbusRegisterType :
(
	InputRegister := 0, HoldingRegister
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>