<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <POU Name="ModbusIo" Id="{cfe7a271-9474-4996-867a-665c5c7d8c6b}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK ModbusIo
VAR_INPUT
	EN: BOOL := TRUE;
	Modbus: REFERENCE TO Modbus;
	UnitID: BYTE;
	RegisterType: ModbusRegisterType;
	Register: WORD;
	Write: BOOL := FALSE;
	ParameterCount: WORD := 1;
	UpdateInterval: LTIME := LTIME#2S;
END_VAR
VAR_OUTPUT
	ENO: BOOL;
	Error: BOOL;
	LastUpdate: DT;
END_VAR
VAR_IN_OUT
END_VAR
VAR
	Registered: BOOL;
	ErrorCount: INT;
END_VAR
VAR PERSISTENT
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF EN AND __ISVALIDREF(Modbus) THEN
	IF NOT Registered THEN
		Modbus.AddIO(THIS);
		Registered := TRUE;	
	END_IF
END_IF
ENO := EN and not Error;
]]></ST>
    </Implementation>
    <Property Name="ErrorOut" Id="{fba349c7-255c-4e7d-b9ff-3cd8aab40960}">
      <Declaration><![CDATA[PROPERTY ErrorOut : BOOL]]></Declaration>
      <Get Name="Get" Id="{b4f378e1-a05e-4b08-b5ac-dfa8dc0c617a}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[ErrorOut := Error;]]></ST>
        </Implementation>
      </Get>
      <Set Name="Set" Id="{af21a136-4472-4451-adb3-f4cea7a9b225}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[Error := ErrorOut;]]></ST>
        </Implementation>
      </Set>
    </Property>
    <Method Name="GetErrorCount" Id="{0a7c06db-ae5c-4760-8afb-b8c2f09c3ab5}">
      <Declaration><![CDATA[METHOD GetErrorCount : INT
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[GetErrorCount := ErrorCount;]]></ST>
      </Implementation>
    </Method>
    <Method Name="IncErrorCount" Id="{ccae06b6-9936-462a-b613-d3b0d10f6e50}">
      <Declaration><![CDATA[METHOD IncErrorCount : BOOL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[IF ErrorCount < 10 THEN
	ErrorCount := ErrorCount + 1;
END_IF]]></ST>
      </Implementation>
    </Method>
    <Method Name="ResetErrorCount" Id="{d0d61f1f-43b4-488b-9a90-006b7e4305c1}">
      <Declaration><![CDATA[METHOD ResetErrorCount : BOOL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[ErrorCount := 0;]]></ST>
      </Implementation>
    </Method>
    <Method Name="SetLastUpdate" Id="{8f8fe46e-f6c0-4c3c-bddd-e43060bf5896}">
      <Declaration><![CDATA[METHOD SetLastUpdate : BOOL
VAR_INPUT
	CurrentTime: DT;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[LastUpdate := CurrentTime;]]></ST>
      </Implementation>
    </Method>
    <Property Name="ValueBoolOut" Id="{3afd66ea-b0f4-4521-80b0-9671f2927062}">
      <Declaration><![CDATA[PROPERTY ValueBoolOut : BOOL]]></Declaration>
      <Get Name="Get" Id="{76813b2b-1ef4-4b99-876d-7aa6a9992400}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[]]></ST>
        </Implementation>
      </Get>
      <Set Name="Set" Id="{678ca27f-d241-44fd-a2db-3ca3ed4711b6}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[]]></ST>
        </Implementation>
      </Set>
    </Property>
    <Property Name="ValueWord" Id="{a791f941-fccb-4e94-9af3-eb1f4346b80f}">
      <Declaration><![CDATA[PROPERTY ValueWord : WORD]]></Declaration>
      <Get Name="Get" Id="{c4f0575f-d52c-406c-8e5e-0f45d92f9f6a}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[]]></ST>
        </Implementation>
      </Get>
      <Set Name="Set" Id="{e4efd358-cbf0-4f54-9be1-f9f72775fc2b}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[]]></ST>
        </Implementation>
      </Set>
    </Property>
    <Property Name="ValueWordArray" Id="{88650c18-e412-46e3-adbb-31c1fc071dab}">
      <Declaration><![CDATA[PROPERTY ValueWordArray : ARRAY [1..125] OF WORD]]></Declaration>
      <Get Name="Get" Id="{2aabd904-e77f-4bc8-8ce1-9dc3f2f5d51f}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[]]></ST>
        </Implementation>
      </Get>
      <Set Name="Set" Id="{329db4af-c165-434a-a8f8-d54204450c95}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[]]></ST>
        </Implementation>
      </Set>
    </Property>
    <LineIds Name="ModbusIo">
      <LineId Id="79" Count="0" />
      <LineId Id="82" Count="4" />
      <LineId Id="104" Count="0" />
      <LineId Id="52" Count="0" />
    </LineIds>
    <LineIds Name="ModbusIo.ErrorOut.Get">
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="ModbusIo.ErrorOut.Set">
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="ModbusIo.GetErrorCount">
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="ModbusIo.IncErrorCount">
      <LineId Id="5" Count="2" />
    </LineIds>
    <LineIds Name="ModbusIo.ResetErrorCount">
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="ModbusIo.SetLastUpdate">
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="ModbusIo.ValueBoolOut.Get">
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="ModbusIo.ValueBoolOut.Set">
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="ModbusIo.ValueWord.Get">
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="ModbusIo.ValueWord.Set">
      <LineId Id="13" Count="0" />
    </LineIds>
    <LineIds Name="ModbusIo.ValueWordArray.Get">
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="ModbusIo.ValueWordArray.Set">
      <LineId Id="13" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>